Displays answers. Fix to word wrap. Minor css adjustments

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -12,7 +12,6 @@
   flex-direction: row;
   position:fixed;
   min-width: auto;
-  white-space: nowrap;
   width:90%;
   max-width:1080px;
   top:0;
